[VFS-360] Migrate to HttpComponent HttpClient. This patch from Woonsan Ko (woonsan on GitHub) adds a new provider "http4" using Apache HttpComponents HttpClient 4. PR https://github.com/apache/commons-vfs/pull/38. Closes #38.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@1845527 13f79535-47bb-0310-9956-ffa450edef68